# conan-dependency-error

./: .gitignore  README.md
a/: CMakeLists.txt  conanfile.py
a/include/: a.h
a/src/: a.cpp
a/test_package/: CMakeLists.txt  conanfile.py
a/test_package/src/: example.cpp
b/: CMakeLists.txt  conanfile.py
b/include/: b.h
b/src/: b.cpp
b/test_package/: CMakeLists.txt  conanfile.py
b/test_package/src/: example.cpp
c/: CMakeLists.txt  conanfile.py
c/include/: c.h
c/src/: c.cpp
c/test_package/: CMakeLists.txt  conanfile.py
c/test_package/src/: example.cpp
